--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -132,7 +132,7 @@
 
 
     function go_to_item(obj) {
-        window.location = '{{=URL("core", "a_item")}}' + '?itm_id=' + obj
+        window.location = '{{=URL("core", "e_item")}}' + '?itm_id=' + obj
     }
 
     function delete_row(id, obj) {
