--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -65,7 +65,8 @@
                     <div class="form-group">
                         <label class="font-weight-bold">Тэги</label>
                         <textarea class="form-control" id="rest_tags" rows='2' data-min-rows='2' type="text"
-                                  placeholder="Доставка, фаст-фуд...">{{for tagg in rest.tags:}}{{=tagg}},{{pass}}</textarea>
+                                  placeholder="Доставка, фаст-фуд...">{{for tagg in rest.tags:}}{{=tagg}}
+                            ,{{pass}}</textarea>
                     </div>
 
 
@@ -169,15 +170,6 @@
 
 <script>
     $(document).ready(function () {
-
-        function split(val) {
-            return val.split(/,\s*/);
-        }
-
-        function extractLast(term) {
-            return split(term).pop();
-        }
-
     {{if rest.is_network:}}
         $('#is_network_div').removeAttr('hidden');
     {{pass}}
