--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -28,7 +28,13 @@
         {{pass}}
         </div>
     </div>
-
+{{if auth.has_membership('admin'):}}
+    <div class="col-md-12 center">
+        <input class="btn btn-success" type="button"
+               onclick="window.location='{{=URL("admin", "add_items_json", vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}'"
+               value="Add via JSON">
+    </div>
+{{pass}}
 {{if len(menu_items) > 0 :}}
 
     <div class="row">
@@ -59,6 +65,7 @@
                 <tr>
                     <td>
                     {{=item.name}}
+                        <p><em class="text-muted">{{for tag in item.tags:}}{{=tag}};{{pass}}</em></p>
                     </td>
                     <td>
                     {{=item.desc}}<br>
@@ -96,12 +103,13 @@
             <h2>Ничего нет :(</h2><br>
             <h2><input class="btn btn-success" type="button" onclick="window.location ='{{=URL('core', 'a_item',
             vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}'" value="Давай добавим!"></h2>
+
         </div>
     </div>
 {{pass}}
     <input type="hidden" id="sure" value="0">
 </div>
-        <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 
 <script>
 
