--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -140,7 +140,7 @@
 
 
     function go_to_item(obj) {
-        window.location = '{{=URL("core", "e_item")}}' + '?itm_id=' + obj
+        window.location = '{{=URL("core", "e_item", vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}' + '&itm_id=' + obj
     }
 
     function delete_row(id, obj) {
