--- a/web2py/applications/menuet/views/core/e_menu.html
+++ b/web2py/applications/menuet/views/core/e_menu.html
@@ -32,7 +32,7 @@
     <div class="col-md-12 center">
         <input class="btn btn-success" type="button"
                onclick="window.location='{{=URL("admin", "add_items_json", vars=dict(m_id=request.vars.m_id,r_id=request.vars.r_id))}}'"
-               value="Add via JSON">
+               value="Add via JSON from ch1ef.ru">
     </div>
 {{pass}}
 {{if len(menu_items) > 0 :}}
